# passport

./: .bumpversion.cfg  .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  docker-compose.yml  inventory  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml  release.yml
ansible/: bootstrap.yml  build.yml  build_image.yml  deploy.yml  inventory  playbook.yml  prepare_server.yml  requirements.yml
ansible/group_vars/: all
ansible/roles/app/defaults/: main.yml
ansible/roles/app/tasks/: build.yml  database.yml  deploy.yml  main.yml  prepare.yml
ansible/roles/app/templates/: Dockerfile.j2
ansible/roles/consul/tasks/: main.yml  (+1 more)
ansible/templates/: Dockerfile.j2  config.yml.j2  nginx.consul-template.conf.j2
passport/: __init__.py  __main__.py  app.py  config.py  exceptions.py  middlewares.py  utils.py  validation.py
passport/handlers/: __init__.py  api.py  metrics.py  service.py
passport/management/: cli.py  db.py  server.py
passport/storage/: users.py
passport/storage/migrations/: alembic.ini  env.py
src/passport/: __main__.py  app.py  client.py  entities.py  exceptions.py
src/passport/domain/: __init__.py
src/passport/handlers/: __init__.py  api.py  auth.py  users.py
src/passport/services/: tokens.py  users.py
src/passport/storage/: __init__.py  sessions.py  users.py
src/passport/use_cases/: __init__.py  users.py
tests/: conftest.py  test_validation.py
tests/handlers/: test_api.py  test_index.py  test_metrics.py
(+18 files in other folders)
