[bumpversion]
current_version = 2.4.3
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)

[metadata]
name = passport
author = Kirill Sumorokov
author-email = sumorokov.k@gmail.com
summary = User identification service
license = MIT

[options]
packages = find:

[pbr]
skip_changelog = yes
skip_authors = yes
